--- a/controller-manifests/v1.1.0/wazi-codeready-operator.csv.yaml
+++ b/controller-manifests/v1.1.0/wazi-codeready-operator.csv.yaml
@@ -28,8 +28,8 @@ metadata:
                 "cheFlavor": "codeready",
                 "devfileRegistryImage": "",
                 "pluginRegistryImage": "",
-                "tlsSupport": false,
-                "selfSignedCert": false
+                "tlsSupport": true,
+                "selfSignedCert": true
              },
              "database": {
                 "externalDb": false,
